# stillness

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  CubeMesh.cpp  CubeMesh.h  MarchingCubes.cpp  MarchingCubes.h  main.cpp
notes/: phong-shading.md  vertex-normals.md
resources/shaders/: default.frag  default.vert
